--- a/frontend/src/resourses/layout.css
+++ b/frontend/src/resourses/layout.css
@@ -33,12 +33,12 @@
   padding-right: 20px;
   height: 95vh;
 }
-.ant-layout-header{
-    margin: 0 10px !important;
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    justify-content: space-between;
+.ant-layout-header {
+  margin: 0 10px !important;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  justify-content: space-between;
 }
 .anticon svg {
   height: 20px;
@@ -46,16 +46,16 @@
   font-size: 20px;
 }
 
-.logo h3{
-  color:#05a5a5 !important;
+.logo h3 {
+  color: #05a5a5 !important;
   font-size: 22px;
   font-weight: bold;
   text-align: center;
   padding-bottom: 100px;
 }
 
-p{
-  color:#e1ffff !important;
+p {
+  color: #e1ffff !important;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
@@ -63,44 +63,45 @@ p{
   margin-top: -60px;
 }
 
-.footer{
+.footer {
   /* text-align: center; */
   position: absolute;
   bottom: 0;
   margin: auto;
 }
-.ant-menu-item-selected{
+.ant-menu-item-selected {
   background-color: #047979 !important;
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
 }
-.cart-count{
+.cart-count {
   cursor: pointer;
 }
-.spinner{
+.spinner {
   z-index: 10;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50% , -50%);
+  transform: translate(-50%, -50%);
 }
-.spinner-border{
+.spinner-border {
   height: 100px;
   width: 100px;
 }
-.ant-layout-content{
+.ant-layout-content {
   height: 80vh;
   overflow-y: scroll;
 }
 
-button{
-  background-color: rgb(15, 155, 15) !important;
-  color: white !important;
+button {
+  background-color: #047979 !important;
+  color: rgb(255, 255, 255) !important;
   border: none !important;
   box-shadow: none;
   outline: none;
+  border-radius: 10px;
 }
-.ant-modal-close-x{
+.ant-modal-close-x {
   background-color: white !important;
   color: black !important;
 }
